[package]
name = "jsondb"
version = "0.1.0"
authors = ["Zvnlanx <kechaotai@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
futures = "0.3.8"
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.61"
