[package]
name = "auth"
version = "0.1.0"
authors = ["kezt <kztai@insucrm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-web-httpauth = "0.5.0"
lazy_static = "1.4.0"
serde = "1.0.120"
serde_derive = "1.0.120"
tera = "1.6.1"
