[package]
name = "persons_db"
version = "0.1.0"
authors = ["Zvnlanx <kechaotai@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-web = "3.3.2"
actix-web-httpauth = "0.5.0"
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.62"
