[package]
name = "yclient"
version = "0.1.0"
authors = ["Zvnlanx <kechaotai@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
base64 = "0.13.0"
serde = "1.0.123"
serde_derive = "1.0.123"
url = "2.2.0"
yew = "0.17.4"
